# programming_exercises

./: .gitignore  exercises.sublime-workspace
c/: alan_patridge_II.c  boolean_to_string.c  hex_to_decimal.c
c++/: check_cpp_version.cpp
c++/codewars/: alan_patridge_II.cpp  quadratic.cpp  swap_vowels_case.cpp
c++/cpp_primer/: streams_01  streams_01.cpp  streams_01.h
c++/exercism/: leap.cpp  leap.h  main.cpp  reverse_string.cpp  reverse_string.h
c++/exercism/space_age/: solution.h  space_age.cpp  space_age.h
c++/hackerrank/: easy.cpp  easy.h  introduction.cpp  introduction.h  string.cpp  string.h
c++/scratchpad/: csvreader  csvreader.cpp
c++/staging_clion/: CMakeLists.txt  conanfile.txt  main.cpp
c++/staging_clion/src/practice/: employee.cpp  employee.h
codewars/: quadratic.cpp
mysql/: installation_notes.md
mysql/state_machine/: examples.sql  order_events.sql  order_events_transition.sql
mysql/state_machine/udf/: load_test_udf.sql  test_udf.cc  test_udf_tables.sql
mysql/tables/: create_table_enemies.sql  table_classes.sql  table_enemies.sql  table_types.sql  tables.md
mysql/users/: create_user.sql  flush_privileges.sql  grant_privileges.sql  users.md
nodejs/api/: console.js  timers.js
sqlite3/: instructions.md
sqlite3/tables/: table_classes.sql  table_enemies.sql  table_types.sql
